--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,9 +20,12 @@
 
 body{font-family: textos;
     background-color: rgb(122, 122, 122);
-    margin: 0; padding: 0;}
+    margin: 0; padding: 0;
+    background-image: url(../Videos/Videofondo/364edb2e6fbb29629296978e48f5dfc9d4879eb5r5-445-250_00.gif);
+    background-repeat: no-repeat;
+    background-size: cover;}
 
-#wrapper{width: 97%;
+#wrapper{width: 77%;
         background-color: aliceblue;
         margin: auto;
         }
@@ -274,7 +277,7 @@ nav {
 
 .topnav .icon{
     display: none;
-   
+    padding: 0px;
 }
 
 /****************************************** MEDIA QUERIES ********************************************/
@@ -290,32 +293,35 @@ nav {
     #grid{grid-template-columns: auto auto;}
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
 @media only screen and (width<=500px){
 
     #grid{grid-template-columns: auto;}
    }
+
+@media only screen and (max-width: 600px)
+{
+    .topnav a:not(:first-child)
+   {display: none;}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+
+
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+}
 
 
 
